# natsec-hackathon

./: .gitignore  pyproject.toml
acousticdetection/: main.py
drone-yolov7-dataset/: README.md  data.yaml
drone-yolov7-dataset/valid/converted_labels/: processed_data.csv
notebooks/: CVPR dataset download.ipynb  Dataset loading - yolov7.ipynb  Label loading - matlab dataset.ipynb  Template matching.ipynb
tests/: test_acoustic_detection.py
tracking/: draw_bbox.py  kalman_filter.py  track.py
