[tool.poetry]
name = "tracking"
version = "0.1.0"
description = ""
authors = ["Andreas Klintberg <andreas.klintberg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scipy = "^1.13.0"
jupyterlab = "^4.1.8"
opencv-python = "^4.9.0.80"
matplotlib = "^3.8.4"
filterpy = "^1.4.5"
sounddevice = "^0.4.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
